# rust_french_package

./: .gitignore  Cargo.toml  README.md
french-conjugate/: Cargo.toml
french-conjugate/src/: data.rs  enums.rs  functions.rs  lib.rs  structs.rs  types.rs
french-feminize/: Cargo.toml
french-inclusive/: Cargo.toml
french-pluralize/: Cargo.toml  README.md
french-pluralize/src/: exceptions.rs  graphemes.rs  lib.rs
french-poetry/: Cargo.toml
french-sandbox/: Cargo.toml
french-sandbox/src/: main.rs
french-words/: Cargo.toml
french-words-generator/: Cargo.toml
french-words-generator/src/: lib.rs  structs.rs
french-words/src/: common_nouns.rs  lib.rs  structs.rs
grapheme-picker/: Cargo.toml  README.md
grapheme-picker/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
