[package]
name = "french-conjugate"
version = "0.1.0"
authors = ["Loic TRUCHOT <loic.truchot.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.19.5"
strum_macros = "0.19.4"
lazy_static = "1.4.0"
grapheme-picker = { path = "../grapheme-picker" }
